--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@
 members = [
     "tsilna-nav",
     "tsilna-protocol",
+    "tsilna-math",
 ]
 # The resolver is a global option that affects the entire workspace.
 # Type "3" mean (edition = "2024" default, requires Rust 1.84+).
