--- a/tsilna-protocol/Cargo.toml
+++ b/tsilna-protocol/Cargo.toml
@@ -15,6 +15,6 @@ edition     = "2024"
 [dependencies]
 # Inertial Measurement Unit Data Transfer Protocol (IDTP) - network protocol
 # used for transferring IMU data.
-idtp = { git = "https://github.com/alkuzin/idtp" }
+idtp = { git = "https://github.com/alkuzin/idtp", version = "2.0.0" }
 # Rust implementation of CRC.
 crc = "3.4"
