[refactor]: re-export software-impl from idtp crate

--- a/tsilna-nav/Cargo.toml
+++ b/tsilna-nav/Cargo.toml
@@ -15,6 +15,7 @@ edition     = "2024"
 [features]
 protocol = ["dep:tsilna-protocol"]
 math = ["dep:tsilna-math"]
+software_impl = ["tsilna-protocol/software_impl"]
 
 # Project dependencies section.
 [dependencies]
